[package]
name = "hammer"
version = "0.1.0"
authors = ["Arnau Siches <arnau.siches@digital.cabinet-office.gov.uk>"]
edition = "2018"

[[bin]]
name = "hammer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "0.3"
chrono = { version = "0.4", features = ["std", "serde"] }
clap = "3.0.0-beta.2"
csv = "1.1"
lazy_static = "1.4"
pulldown-cmark = "0.8"
regex = "1.5"
rusqlite = { version = "0.25", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
toml = "0.5"
walkdir = "2.3"

[dev-dependencies]
temp_testdir = "0.2"
